Update the HTML element selector and test data

--- a/tests/data/20200628_kobo_99_book_page.html
+++ b/tests/data/20200628_kobo_99_book_page.html
@@ -2646,11 +2646,8 @@
             <div class="support title-widget">
                 <div class="item-info">
 
-                    <h1>
-
-<span class="title product-field" data-ellide=true  translate=no  data-track-info='{&quot;description&quot;:&quot;title&quot;}' data-force-track>
-手寫時代：從寫字到打字，一部五千年的人類書寫文明史及未來</span>
-</h1>
+<h2 class="title product-field" data-ellide=true  translate=no  data-track-info='{&quot;description&quot;:&quot;title&quot;}' data-force-track>
+手寫時代：從寫字到打字，一部五千年的人類書寫文明史及未來</h2>
 
 
 
